--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,5 +7,13 @@
 }
 
 body {
-    background-color: #181818;
+    background-image: url(../img/design.png);
+    background-size: 85%;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
 }
