--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    padding: 50px;
     width: 100%;
 }
 
@@ -79,5 +79,8 @@ body {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    height: 80%;
+    position: absolute;
+    padding: 50px;
 }
 /* FIM DO MAIN */
