--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,7 @@ body {
     background-size: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    padding: 80px 100px 80px 100px;
 }
 /* FINAL BODY */
 
@@ -22,7 +23,6 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 50px;
     width: 100%;
 }
 
@@ -81,7 +81,6 @@ body {
     width: 30%;
     height: 80%;
     position: absolute;
-    padding: 50px;
 }
 
 .conteudo h3 {
