--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,7 +88,7 @@ body {
     font-size: 30px;
     color: #ffffff;
     text-transform: uppercase;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     font-weight: bold;
 }
 
@@ -103,6 +103,20 @@ body {
     color: #ffffff;
     font-family: 'Roboto';
     font-size: 20px;
-    font-weight: normal;
+    font-weight: lighter;
+    margin-bottom: 50px;
+}
+
+.conteudo a {
+    color: #ffffff;
+    font-size: 25px;
+    text-decoration: none;
+}
+
+.line {
+    padding: 1px;
+    background-color: #ffffff;
+    width: 140px;
+    opacity: 0.5;
 }
 /* FIM DO MAIN */
