--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -105,6 +105,8 @@ body {
     font-size: 20px;
     font-weight: lighter;
     margin-bottom: 50px;
+    width: 70%;
+    line-height: 30px;
 }
 
 .conteudo a {
