--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,8 @@
 
 /* INÍCIO BODY */
 body {
+    width: 100%;
+    height: 100vh;
     background-image: url(../img/design.png);
     background-size: 100%;
     background-repeat: no-repeat;
