--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,7 @@ body {
     width: 100%;
     height: 100vh;
     background-image: url(../img/design.png);
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     padding: 80px 100px 80px 100px;
 }
