--- a/assets/css/engine.css
+++ b/assets/css/engine.css
@@ -12,7 +12,7 @@
 body {
     width: 100%;
     height: 100vh;
-    background-image: url(../img/motion.png);
+    background-image: url(../img/engine.png);
     background-size: cover;
     background-repeat: no-repeat;
     padding: 80px 100px 80px 100px;
